# evmdecode

./: .gitignore  Cargo.toml  Heimdallrepo.md  Notes.md  README.md  outputs.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: decode.rs  disasm.rs  mev.rs  mod.rs  simulate.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  types.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: abi_decode.rs  custom_abi.rs  lib.rs  selector.rs
crates/decoder/src/disasm_engine/: mod.rs  opcode.rs
crates/disasm/: Cargo.toml
crates/disasm/src/: lib.rs  opcode.rs
crates/gas/: Cargo.toml
crates/gas/src/: breakdown.rs  intrinsic.rs  lib.rs
crates/mev/: Cargo.toml
crates/mev/src/: block.rs  decode.rs  detector.rs  lib.rs  patterns.rs  uniswap.rs
crates/render/: Cargo.toml
crates/render/src/: json.rs  lib.rs  pretty.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: fetcher.rs  lib.rs  provider.rs  tracer.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs  replayer.rs  state_diff.rs
examples/: usdc_transfer.md
