[package]
name = "evmdecode-mev"
version = "0.1.0"
edition = "2021"

[lib]
name = "evmdecode_mev"
path = "src/lib.rs"

[dependencies]
evmdecode-core = { path = "../core" }
alloy          = { workspace = true }
anyhow         = { workspace = true }
hex            = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
eyre           = "0.6"
tokio          = { workspace = true }
